fix: header mbile alignment

--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -324,9 +324,9 @@
     background: transparent;
     border: none;
     display: block;
-    position: absolute;
+    /* position: absolute;
     top: (10/16rem);
-    right: (70/16rem);
+    right: (70/16rem); */
     z-index: 1000;
     overflow: hidden;
 
